--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,21 +1,21 @@
 *{
     box-sizing: border-box;
 }
+html{
+    font-size: 16px;
+}
 h1{
     text-transform: uppercase;
     font-weight: 700;
+    font-size: 15px;
 }
 h2,h3{
     color: green;
 }
-nav ul li{
-    list-style:none;
-    display: inline;
-    margin-right: 15px;  
- 
-}
+
 
 header {
+    display: flex;
     text-align: center;
     background-color: red;
     color: beige;
@@ -24,6 +24,35 @@ header {
     position: sticky;
     top: 0;
 }
+.menu{
+    list-style: none;
+    display: none;
+    }
+    
+    .menu a{
+        color: darkgreen;
+        font-weight: bold;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 70px;
+    }
+    .menu.aberto{
+        display: flex;
+        flex-direction: column;
+        color: azure;
+        position: absolute;
+        left: 0;
+        right: 0;
+        background-color: azure;
+    }
+    nav h2 a {
+        font-size: 1.2rem;
+        padding: 1rem;
+        display: inline-block;
+    
+    }
+    
 a{
     text-decoration: none;
     color: beige;
@@ -51,6 +80,7 @@ table{
     margin: auto;
     border: solid 1px;
     color: rgba(255, 106, 47, 0.89);
+    font-size: 12px;
 }
 table, th, td{
     border: solid 1px
@@ -70,4 +100,26 @@ footer{
     width: 80%;
     margin: auto;
     padding: 15px;
+}
+@media (min-width:570px) {
+    nav h2 {
+        display: none;
+    }
+
+    .menu {
+        display: flex;
+    }
+
+    .menu li {
+        width: 100%;
+    }
+
+    nav {
+        width: 70%;
+    }
+
+    .front-end img{
+        height: 150px;
+    }
+
 }
